fix: Hide list-style-type on mobile

--- a/src/components/BestPractices.module.css
+++ b/src/components/BestPractices.module.css
@@ -1,8 +1,11 @@
+.root ul {
+  padding: 0;
+  list-style-type: none;
+  margin: 0 0 6rem;
+}
+
 @media screen and (min-width: 700px) {
   .root ul {
-    margin: 0 0 6rem;
-    padding: 0;
-    list-style-type: none;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
